--- a/#src/scss/contact/map.scss
+++ b/#src/scss/contact/map.scss
@@ -12,20 +12,25 @@
         bottom: -195px;
         right: 40%;
     }
+    &__info {
+        max-width: 1440px;
+        margin: 0 auto;
+    }
     &__block {
         width: 100%;
         &-title {
             padding: 0px 180px;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            flex-direction: column;
+            max-width: 1440px;
+            margin: 0 auto;
             & p {
                 width: 100%;
+                white-space: pre;
                 font-family: Circe;
                 font-style: normal;
                 font-weight: bold;
                 font-size: 30px;
-                line-height: 53px;
                 letter-spacing: 0.15em;
                 text-transform: uppercase;
                 color: #505050;
@@ -34,7 +39,7 @@
             }
         }
         &-blocks {
-            margin: 157px 180px 40px 180px;
+            margin: 157px 180px 40px 0;
             width: 292px;
             display: flex;
             align-items: center;
@@ -111,7 +116,7 @@
             color: #000000;
         }
         &-email {
-            padding: 0 180px;
+            padding: 0 90px 0 180px;
             width: 100%;
             display: flex;
             flex-direction: column;
