--- a/#src/scss/index/team.scss
+++ b/#src/scss/index/team.scss
@@ -3,6 +3,10 @@
     z-index: 1;
     position: relative;
     padding: 0 0 170px 0;
+    & .container {
+        max-width: 1440px;
+        margin: 0 auto;
+    }
     &::after {
         content: "";
         position: absolute;
