--- a/#src/scss/new/media.scss
+++ b/#src/scss/new/media.scss
@@ -117,6 +117,9 @@
     .n-header__menu-item {
         color: #000;
     }
+    .n-header__new-fon {
+        display: block;
+    }
 }
 @media (max-width: 1000px) {
     .n-header__nav {
