--- a/#src/scss/design/new.scss
+++ b/#src/scss/design/new.scss
@@ -6,11 +6,22 @@
     position: relative;
     overflow: hidden;
     &__content {
+        max-width: 1440px;
+        margin: 0 auto;
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         padding: 90px 90px 0 180px;
+        &-fon {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, .3);
+            z-index: -1;
+        }
         &-ribbon {
             width: 640px;
         }
@@ -111,6 +122,7 @@
             position: relative;
             width: 520px;
             height: 235px;
+            margin: 0 0 34px 0;
         }
         &-item {
             padding: 39px 0 0 58px;
