--- a/#src/scss/detail/task.scss
+++ b/#src/scss/detail/task.scss
@@ -1,6 +1,9 @@
 .dt-task {
     position: relative;
     padding: 200px 0 0 0;
+    & .container {
+        max-width: 1440px;
+    }
     &__text {
         width: 100%;
         height: 100%;
