--- a/#src/scss/index/case.scss
+++ b/#src/scss/index/case.scss
@@ -4,8 +4,12 @@
     z-index: 1;
     overflow: hidden;
     position: relative;
+    & .container {
+        max-width: 1440px;
+        margin: 0 auto;
+    }
     &__text {
-        padding: 93px 90px 0px 90px;
+        padding: 93px 0 0px 0;
         &-number {
             height: 18px;
             width: 55px;
@@ -65,6 +69,8 @@
         }
     }
     &__image {
+        max-width: 1440px;
+        margin: 0 auto;
         width: 100%;
         height: 500px;
         background-image: url('../img/case-img-1.png');
@@ -84,6 +90,8 @@
         }
     }
     &__lists {
+        max-width: 1440px;
+        margin: 0 auto;
         width: 100%;
         display: flex;
         justify-content: space-between;
