--- a/#src/scss/new/footer.scss
+++ b/#src/scss/new/footer.scss
@@ -2,6 +2,9 @@
     width: 100%;
     z-index: 1;
     position: relative;
+    & .container {
+        max-width: 1440px;
+    }
     &__container {
         border-top: 1px solid #949494;
     }
