--- a/#src/scss/seo/about.scss
+++ b/#src/scss/seo/about.scss
@@ -1,6 +1,8 @@
 .s-about {
     position: relative;
     &__block {
+        max-width: 1440px;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
         width: 100%;
@@ -85,6 +87,8 @@
         }
     }
     &__list {
+        max-width: 1440px;
+        margin: 0 auto;
         width: 100%;
         height: 100%;
         margin-top: 200px;
