--- a/#src/scss/seo/audit.scss
+++ b/#src/scss/seo/audit.scss
@@ -2,6 +2,8 @@
     position: relative;
     padding: 152px 0 0 0;
     &__block {
+        max-width: 1440px;
+        margin: 0 auto;
         width: 100%;
         height: 100%;
         padding: 0 180px;
@@ -250,7 +252,7 @@ button.s-audit__text-btn {
 		transition: .15s .25s ease left, .5s .05s ease color;
 	}
 	&.btn-right-after:before {
-		content: 'Найти точки роста';
+		content: '';
 		position: absolute;
 		left: -230px;
 		top: 14px;
